--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="info__container">
                 <div class="info__content">
                     <h1 id="about" class="info__content__heading">Welcome to our Bakery</h1>
-                    <p class="info__content__para">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur uis autem vel eum.</p>
+                    <p class="info__content__para">We are not just a bakery, we are not just bakers. In fact, we are just like you, a bunch of food lovers fascinated with sweet indulgence, who dreamt of creating an appetizing fairy land of divine delicacies that relishes the utmost desires.</p>
                     <br>
                     <p class="info__content__para2">Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure.</p>
                     <button class="info__button">Know More About Us</button>
